feat: Configure project name and PWA settings
Update package.json, index.html, metadata.json, manifest.json, and sw.js to correctly configure the project name as "Mafia Crush" and enhance PWA (Progressive Web App) capabilities with appropriate meta tags and service worker registration paths.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "copy-of-copy-of-mafia-crush",
+  "name": "mafia-crush",
   "private": true,
   "version": "0.0.0",
   "type": "module",
