--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,10 @@
 {
+  "id": "/",
   "name": "Mafia Crush",
   "short_name": "MafiaCrush",
   "description": "Rise through the ranks in this high-stakes Mafia match-3 puzzle game. 30,000 levels of crime and strategy.",
-  "start_url": "./index.html",
+  "start_url": "/",
+  "scope": "/",
   "display": "standalone",
   "orientation": "portrait",
   "background_color": "#0f172a",
