--- a/manifest.json
+++ b/manifest.json
@@ -9,18 +9,19 @@
   "orientation": "portrait",
   "background_color": "#0f172a",
   "theme_color": "#0f172a",
+  "categories": ["games", "puzzle", "entertainment"],
   "icons": [
     {
       "src": "https://cdn-icons-png.flaticon.com/512/2042/2042693.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "any"
     },
     {
       "src": "https://cdn-icons-png.flaticon.com/512/2042/2042693.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "any"
     }
   ]
 }
