--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,16 @@
 {
-  "id": "/",
   "name": "Mafia Crush",
   "short_name": "MafiaCrush",
   "description": "Rise through the ranks in this high-stakes Mafia match-3 puzzle game. 30,000 levels of crime and strategy.",
+  "id": "/",
   "start_url": "/",
   "scope": "/",
   "display": "standalone",
   "orientation": "portrait",
   "background_color": "#0f172a",
   "theme_color": "#0f172a",
+  "lang": "en-US",
+  "prefer_related_applications": false,
   "categories": ["games", "puzzle", "entertainment"],
   "icons": [
     {
