feat: Update PWA configuration for Vercel deployment
Update manifest and service worker to use absolute URLs for assets and cache entries. This ensures correct PWA behavior and offline support when deployed to Vercel.

--- a/manifest.json
+++ b/manifest.json
@@ -2,15 +2,14 @@
   "name": "Mafia Crush",
   "short_name": "MafiaCrush",
   "description": "Rise through the ranks in this high-stakes Mafia match-3 puzzle game. 30,000 levels of crime and strategy.",
-  "id": "/",
-  "start_url": "/",
-  "scope": "/",
+  "id": "https://mafiacrush.vercel.app/",
+  "start_url": "https://mafiacrush.vercel.app/",
+  "scope": "https://mafiacrush.vercel.app/",
   "display": "standalone",
   "orientation": "portrait",
   "background_color": "#0f172a",
   "theme_color": "#0f172a",
   "lang": "en-US",
-  "prefer_related_applications": false,
   "categories": ["games", "puzzle", "entertainment"],
   "icons": [
     {
