--- a/manifest.json
+++ b/manifest.json
@@ -2,9 +2,9 @@
   "name": "Mafia Crush",
   "short_name": "MafiaCrush",
   "description": "Rise through the ranks in this high-stakes Mafia match-3 puzzle game. 30,000 levels of crime and strategy.",
-  "id": "https://mafiacrush.vercel.app/",
-  "start_url": "https://mafiacrush.vercel.app/",
-  "scope": "https://mafiacrush.vercel.app/",
+  "id": "/",
+  "start_url": "/",
+  "scope": "/",
   "display": "standalone",
   "orientation": "portrait",
   "background_color": "#0f172a",
