feat: Enhance PWA capabilities and user experience
Updates PWA configuration to use relative paths for manifest and service worker, improving offline functionality and installation. Disables default browser context menus and forces internal link navigation to provide a more native application feel. Modifies Vercel rewrites for broader index.html redirection.

--- a/manifest.json
+++ b/manifest.json
@@ -2,9 +2,9 @@
   "name": "Mafia Crush",
   "short_name": "MafiaCrush",
   "description": "Rise through the ranks in this high-stakes Mafia match-3 puzzle game. 30,000 levels of crime and strategy.",
-  "id": "/",
-  "start_url": "/",
-  "scope": "/",
+  "id": "./",
+  "start_url": "./index.html",
+  "scope": "./",
   "display": "standalone",
   "orientation": "portrait",
   "background_color": "#0f172a",
